--- a/css/style.css
+++ b/css/style.css
@@ -7,25 +7,42 @@ html{
 *::before{
   box-sizing: border-box;
 }
-a{
-  text-decoration: none;
-  color: inherit;
-}
-button{
-  padding: 0;
-  margin: 0;
-  border: none;
-  background-color: transparent;
-}
-ul{
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-h1,h2,h3,h4,h5,h6, p{
-  margin: 0;
-}
-blockquote{
-  margin: 0;
-}
 /* End Base Settings */
+
+/* Main Settings */
+:root{
+  --index: calc(1vw + 1vh);
+  --color-header: #f4efec;
+  --color-text: #cdc6c3;
+}
+@font-face{
+  font-family: raleway-c;
+  src: url(../fonts/raleway-regular.woff2);
+}
+@font-face{
+  font-family: outfit-c;
+  src: url(../fonts/outfit-regular.woff2);
+}
+body{
+  background-image: url(../images/bg.jpg);
+  background-size: 50px;
+  color: #fafafa;
+  font-family: raleway-c;
+  overflow: hidden;
+}
+.container{
+  padding: 0 7vw;
+}
+.hero__img{
+  position: absolute;
+  width: calc(var(--index) * 36);
+  left: 37vw;
+  top: 8vh;
+}
+.main__title{
+  font-size: calc(var(--index) * 8);
+  position: absolute;
+  width: min-content;
+  bottom: 12vh;
+  line-height: .9;
+}
