--- a/css/style.css
+++ b/css/style.css
@@ -23,12 +23,15 @@ html{
   font-family: outfit-c;
   src: url(../fonts/outfit-regular.woff2);
 }
+h1, h2, h3, h4, h5, h6{
+  font-family: outfit-c;
+}
 body{
   background-image: url(../images/bg.jpg);
   background-size: 50px;
   color: #fafafa;
   font-family: raleway-c;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 .container{
   padding: 0 7vw;
@@ -38,6 +41,9 @@ body{
   width: calc(var(--index) * 36);
   left: 37vw;
   top: 8vh;
+}
+.main-header{
+  height: 100vh;
 }
 .main__title{
   font-size: calc(var(--index) * 8);
