--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@ html{
   --index: calc(1vw + 1vh);
   --color-header: #f4efec;
   --color-text: #cdc6c3;
+  --gallery-gap: calc(var(--index) * 10)
 }
 @font-face{
   font-family: raleway-c;
@@ -41,8 +42,9 @@ body{
   width: calc(var(--index) * 36);
   left: 37vw;
   top: 8vh;
+  z-index: -1;
 }
-.main-header{
+.main__header{
   height: 100vh;
 }
 .main__title{
@@ -51,4 +53,42 @@ body{
   width: min-content;
   bottom: 12vh;
   line-height: .9;
+}
+
+.gallery{
+  display: flex;
+  padding: calc(var(--index) * 8) 0;
+}
+.gallery > * {
+  display: flex;
+  flex: 1;
+  align-items: center;
+  flex-direction: column;
+}
+
+.gallery__item{
+  max-width: calc(var(--index) * 21 );
+  max-height: 180vh;
+  margin-bottom: var(--gallery-gap);
+  border-radius: 8px;
+}
+.gallery__left{
+  margin-top: calc(var(--gallery-gap) * 1.75);
+}
+.gallery__right .gallery__item{
+  margin: 0;
+  margin-top:  var(--gallery-gap);
+}
+.text-block {
+  color: var(--color-text);
+  position: relative;
+}
+.text-block__h{
+  font-size: 2rem;
+  line-height: 2.4rem;
+  color: var(--color-header);
+  margin-bottom: 1.5rem;
+}
+.text-block__p{
+  line-height: 1.75rem;
 }
